# Lab006_TIMP

./: CPackConfig.cmake  README.md
.github/: .coveralls.yml
.github/workflows/: actions.yml
formatter_ex_lib/: CMakeLists.txt  formatter_ex.cpp
formatter_lib/: CMakeLists.txt
solver_application/: CMakeLists.txt
solver_lib/: CMakeLists.txt  solver.cpp
